--- a/assignments/lab1-histogram/src/Makefile
+++ b/assignments/lab1-histogram/src/Makefile
@@ -1,12 +1,14 @@
 # c++ -pthread -std=c++11 -O2 histogram.cxx ee155_utils.cxx
 
+SOURCE = histogram.cxx ee155_utils.cxx histogram_user.cxx
+
 all: histogram
 
-histogram: histogram.cxx ee155_utils.cxx
-	c++ -pthread -std=c++11 -g histogram.cxx ee155_utils.cxx histogram_user.cxx -o histogram
+histogram: $(SOURCE)
+	c++ -pthread -std=c++11 -g $(SOURCE) -o histogram
 
-histogram_opt:
-	c++ -pthread -std=c++11 -O2 histogram.cxx ee155_utils.cxx histogram_user.cxx -o histogram
+histogram_opt: $(SOURCE)
+	c++ -pthread -std=c++11 -O2 $(SOURCE) -o histogram
 
 .PHONY: clean
 clean:
